# deploy-cf-with-terraform

./: .gitignore  README.md  main.tf  pyproject.toml
deploy_cf_with_terraform/: requirements.txt
