[tool.poetry]
name = "deploy-cf-with-terraform"
version = "0.1.0"
description = ""
authors = ["leandrobi <leandroalves2w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
